agrego ultima tarea del PrepCourse

--- a/09-CSS-Positioning/demo/flexbox.html
+++ b/09-CSS-Positioning/demo/flexbox.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>FlexBox</title>
-  <style type="text/css">
-      .box {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-      }
 
-      .box div {
-        width: 100px;
-        border: black solid 1px;
-      }
-  </style>
+<head>
+    <title>FlexBox</title>
+    <style type="text/css">
+        .box {
+            display: flex;
+            flex-direction: row;
+            justify-content: space space-around;
+            align-items: center;
+        }
+        
+        .box div {
+            width: 100px;
+            border: black solid 1px;
+        }
+    </style>
 </head>
+
 <body>
     <div class="box">
         <div>One</div>
@@ -28,4 +30,5 @@
     </div>
 
 </body>
+
 </html>
